finally fixed issue on footer overflowing nav dropdowns

--- a/footer.css
+++ b/footer.css
@@ -1,7 +1,6 @@
 /* FOOTER */
 .footer-container {
     position: relative;
-    z-index: -1;    
 }
 
 .newsletter {
